# OneShell

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  forward.rs  known_hosts.rs  lib.rs  models.rs  monitor.rs  secret.rs  sftp.rs  socks5.rs  ssh.rs  store.rs
src/assets/: main.css
src/assets/logo/: README.md
src/components/: AiCommandBar.vue  AiPanel.vue  AiSettingsDialog.vue  ForwardPanel.vue  HostFormDialog.vue  HostKeyDialog.vue  HostSidebar.vue  MonitorPanel.vue  SftpPanel.vue  SidePanel.vue  TerminalTabs.vue  TerminalView.vue
src/lib/: ai-conversations.ts  api.ts  store.ts  term-context.ts
