[package]
name = "tauri-app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.62.3"
russh-sftp = "2.3.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.19"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
hmac = "0.12"
sha1 = "0.10"
libc = "0.2"
base64 = "0.22.1"
dirs = "6.0.0"
parking_lot = "0.12.5"
tauri-plugin-dialog = "2.7.2"
futures-util = "0.3.33"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls"] }

# 凭据落 OS 钥匙串; 按平台显式选后端, 避免默认 feature 拉进 D-Bus/OpenSSL 等原生依赖
# Linux 用 zbus(纯 Rust) + Rust 加密栈, CI 无需额外系统包; 运行时需要 secret-service 守护进程
# (gnome-keyring / kwallet), 缺失时凭据读写会报错而不是静默降级
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tempfile = "3"

